my-webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webapp
  labels:
    app: my-webapp
    tier: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  - port: 443
    protocol: TCP
    targetPort: 443
    name: https
  externalIPs:
    - '212.83.138.131'
  selector:
    app: my-webapp
    tier: frontend
