my-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: traefik.umate.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: my-traefik
          servicePort: 80
  tls:
  - secretName: tls-staging-cert
    hosts:
    - traefik.umate.xyz
## cert-manager with nginx-ingress
